Fix slider overflow

--- a/style.css
+++ b/style.css
@@ -16,12 +16,15 @@ body {
   font-family: "Oswald", sans-serif;
   font-size: 12px;
   box-sizing: border-box;
+  overflow-x: hidden;
+  
 }
 header {
   display: flex;
   justify-content: space-around;
   padding-top: 5px;
   font-size: 15px;
+  overflow: hidden;
 }
 
 /* ------------- All buttons -----------------*/
@@ -30,8 +33,9 @@ header {
   position: absolute;
   top: 0%;
   right: -10%;
-  background-color: green;
-  border-radius: 10%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  box-shadow: 0px 0px 3px;
   font-size: 1.2rem;
   text-transform: uppercase;
 }
@@ -444,6 +448,7 @@ fieldset {
   .container {
     justify-content: flex-start;
     height: 90vh;
+    overflow: hidden;
   }
 
   .slide__communicate {
